# Pictostats

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sensor list.txt
core/: Application.cpp  Application.h  HardwareBackend.cpp  HardwareBackend.h
panels/: Panels.cpp  Panels.h
ui/: AddModal.cpp  AddModal.h  CustomWidgets.cpp  CustomWidgets.h  Theme.h
